src/main/frontend/components/block.css
/* ... */
.page-ref {
  color: var(--lx-accent-11, var(--ls-link-text-color, hsl(var(--primary)/.8)));

  &:hover {
    color: var(--lx-accent-11, var(--ls-link-text-color, hsl(var(--primary))));
  }

  &:has(.asset-ref.is-pdf) {
    .asset-block-wrap {
      @apply inline;
    }
  }

  .block-title-wrap {
    > .prefix-link {
      @apply inline mx-1;
    }
  }
}

.asset-ref {
  &-wrap {
    &[data-ext=pdf] {
      display: inline-flex;
      align-items: center;
    }
  }

  &.is-doc {
    &:before {
      content: "[[📜";
      opacity: .7;
      margin-right: 4px;
    }

    &:after {
      content: "]]";
      opacity: .7;
    }
  }
}

.embed-page {
  @apply py-2 my-2 px-2;

  > section {
    margin-bottom: 5px;
  }

  &.in-sidebar {
    background-color: var(--ls-tertiary-background-color);
  }
}

.block-properties, .page-properties {
  margin: 4px 0;
  padding: 4px 8px;
  background-color: var(--lx-gray-03, var(--ls-block-properties-background-color, var(--rx-gray-03)));
}

.block-marker {
  padding: 2px 4px;
  opacity: 0.7;
  font-size: 85%;
  margin: 0 2px 0 0;
  font-weight: 650;
  border: 0;
}

.marker-switch {
  &:hover {
    color: var(--ls-link-text-hover-color);
    opacity: 1;
  }
}

.block-main-container {
  @apply min-h-[24px];
  --ls-heading-control-icon-size: 14px;

  > .block-control-wrap.is-with-icon {
    .bullet-container {
      width: var(--ls-heading-control-icon-size);
      min-width: var(--ls-heading-control-icon-size);
      height: var(--ls-heading-control-icon-size);
    }

    .icon-cp-container,
    .ls-icon-color-wrap,
    .ui__icon {
      display: inline-flex;
      align-items: center;
      justify-content: center;
      line-height: 1;
    }

    .ls-icon-color-wrap em-emoji,
    .ui__icon em-emoji {
      display: block;
      line-height: 1;
    }

    .ui__icon.ti svg {
      width: var(--ls-heading-control-icon-size);
      height: var(--ls-heading-control-icon-size);
    }
  }

  &[data-has-heading="1"], &:has(textarea.h1) {
    --ls-heading-control-icon-size: 28px;

    > .block-control-wrap {
      @apply relative top-4;
    }

    .block-content-or-editor-wrap {
      .positioned-properties {
        @apply relative top-4;
      }
    }
  }

  &[data-has-heading="2"], &:has(textarea.h2) {
    --ls-heading-control-icon-size: 24px;

    > .block-control-wrap {
      @apply relative top-2.5;
    }

    .block-content-or-editor-wrap {
      .positioned-properties {
        @apply relative top-3;
      }
    }
  }

  &[data-has-heading="3"], &:has(textarea.h3) {
    --ls-heading-control-icon-size: 20px;
    align-items: center;

    .block-content-or-editor-wrap {
      .positioned-properties {
        @apply relative top-[2px];
      }
    }
  }

  &[data-has-heading="4"], &:has(textarea.h4) {
    --ls-heading-control-icon-size: 16px;
    align-items: center;
  }

  &[data-has-heading="5"], &:has(textarea.h5) {
    --ls-heading-control-icon-size: 13px;
    align-items: center;
  }

  &[data-has-heading="6"], &:has(textarea.h6) {
    --ls-heading-control-icon-size: 12px;
    align-items: center;
  }
}

.ls-page-title-container .block-content-wrapper {
  .ls-page-title-actions {
    @apply absolute -top-5 opacity-0;
    left: -2px;
  }

  &:hover {
    & > .ls-page-title-actions {
      @apply delay-300 transition-opacity opacity-100;

    }
  }
}

.ls-block {
  @apply flex-1 relative py-0.5 transition-[background-color] mx-auto;
  width: 100%;
  transform: translateX(0);
  transition: transform 0.3s ease;
  will-change: transform;

  container-type: inline-size;
  container-name: ls-block;

  &.selected {
    @apply rounded;
  }
}

.ls-table .ls-block {
  container-type: initial;
}

#main-content-container, #right-sidebar {
    container-type: inline-size;
}

@container (max-width: 600px) {
    .time-spent {
        display: none;
    }

    .view-actions > * {
        display: none;
    }

    .view-actions > .view-action-search,
    .view-actions > .view-action-type {
        display: inline-flex;
    }

    .block-row {
        @apply flex-col gap-0;
    }

    .ls-block-right {
        @apply gap-0 -ml-1;
    }
    .ls-page-title .ls-block-right {
        @apply ml-0;
    }
}

@container ls-block (max-width: 430px) {
    .ls-properties-area {
        display: none;
    }
}

.ls-block h1,
.editor-inner .h1.uniline-block {
  font-size: 2rem;
  min-height: 1.5em;
  line-height: 1.38em;
}

.ls-block h2,
.editor-inner .h2.uniline-block {
  font-size: 1.5rem;
  min-height: 1.5em;
  line-height: 1.38em;
}

.ls-block h3,
.editor-inner .h3.uniline-block {
  font-size: 1.2rem;
  min-height: 1.2em;
  line-height: 1.15em;
}

.ls-block h4,
.editor-inner .h4.uniline-block {
  font-size: 1rem;
  min-height: 1em;
}

.ls-block h5,
.editor-inner .h5.uniline-block {
  font-size: 0.83rem;
  min-height: 0.83em;
}

.ls-block h6,
.editor-inner .h6.uniline-block {
  font-size: 0.75rem;
  min-height: 0.75rem;
}

.ls-block :is(h1, h2, h3, h4, h5, h6),
.editor-inner .uniline-block:is(.h1, .h2, .h3, .h4, .h5, .h6),
.editor-inner .multiline-block:is(.h1, .h2, .h3, .h4, .h5, .h6)::first-line {
  font-weight: 600;
}

.ls-block :is(h1, h2),
.editor-inner .uniline-block:is(.h1, .h2) {
  @apply border-b border-gray-06 mt-1 mb-2 pb-1;
}

.editor-inner textarea.uniline-block:is(.h1, .h2) {
  border-bottom-style: solid;
  border-bottom-color: transparent;
}

.block-ref .ls-block :is(h1, h2),
.block-ref .editor-inner :is(.h1, .h2) {
  border-bottom: none;
}

.block-ref :is(h1, h2, h3, h4, h5, h6) {
  border-bottom: none;
  font-size: 1rem;
}

.document-mode {
  & .ls-block h1,
  & .editor-inner .h1 {
    margin: 0.67em 0;
  }

  & .ls-block h2,
  & .editor-inner .h2 {
    margin: 0.75em 0;
  }

  & .ls-block h3,
  & .editor-inner .h3 {
    margin: 0.83em 0;
  }

  & .ls-block h4,
  & .editor-inner .h4 {
    margin: 1.12em 0;
  }

  & .ls-block h5,
  & .editor-inner .h5 {
    margin: 1.5em 0;
  }

  & .ls-block h6,
  & .editor-inner .h6 {
    margin: 1.67em 0;
  }
}
/* ... */

